# Solitaire-Console

./: .gitattributes  .gitignore  .gitmodules  CMakeLists.txt  README  README.md  Solitaire.sln  build.xml  example.ar
Solitaire/: Card.cpp  Card.h  Deck.cpp  Deck.h  Solitaire.cpp  Solitaire.h  Solitaire.vcxproj  Solitaire.vcxproj.filters
archive/: CMakeLists.txt  README
archive/include/: Allocator.hpp  Archive.hpp  ArchiveUtil.hpp  Available.hpp  Directory.hpp  File.hpp  Header.hpp  HeaderWrapper.hpp  Meta.hpp  StreamWrapper.hpp
archive/src/: Archive.cpp  Archive.t.cpp  ArchiveTest.cpp  ArchiveUtil.cpp  Available.cpp  CMakeLists.txt  Directory.cpp  File.cpp  Header.cpp  Meta.cpp  StreamWrapper.cpp  main.cpp
blackjack/: CMakeLists.txt  README
blackjack/include/: Blackjack.hpp
blackjack/src/: Blackjack.cpp  CMakeLists.txt
checkers/: CMakeLists.txt  README.md
checkers/include/: Checkers.hpp
checkers/src/: CMakeLists.txt  Checkers.cpp
chess/: CMakeLists.txt  README.md
chess/include/: Chess.hpp
chess/src/: CMakeLists.txt  Chess.cpp
cmake_modules/: functions.cmake
common/: CMakeLists.txt  README.md
common/include/: Board.hpp  Card.hpp  Deck.hpp  Game.hpp  Grid.hpp  Hand.hpp  Keyboard.hpp  Main.hpp  Number.hpp  Piece.hpp  Player.hpp  Random.hpp  termcolor.hpp
common/src/: Board.cpp  CMakeLists.txt  Card.cpp  Deck.cpp  Game.cpp  Grid.cpp  Hand.cpp  Main.cpp  Piece.cpp  Player.cpp  Random.cpp
connectn/: CMakeLists.txt  README
connectn/include/: ConnectN.hpp
connectn/src/: CMakeLists.txt  ConnectN.cpp
fp/: CMakeLists.txt  README.md
fp/include/: fp.hpp
fp/src/: fp.cpp
include/: Solitaire.hpp
irc/: CMakeLists.txt
irc/include/: IRCClient.hpp
irc/src/: IRCClient.cpp
meta/: CMakeLists.txt
meta/include/: fib.hpp
solitaire/: CMakeLists.txt  README.md
solitaire/include/: Card.hpp  Solitaire.hpp
solitaire/src/: CMakeLists.txt  Solitaire.cpp
sqlite/: CMakeLists.txt
sqlite/src/: CMakeLists.txt
src/: CMakeLists.txt  lobby.cpp
tetris/: CMakeLists.txt  README.md
tetris/include/: Tetris.hpp
tetris/src/: Tetris.cpp
tictactoe/: CMakeLists.txt  README.md
tictactoe/include/: TicTacToe.hpp
tictactoe/src/: CMakeLists.txt  TicTacToe.cpp
toetactic/: CMakeLists.txt
toetactic/include/: ToeTacTic.hpp
toetactic/src/: CMakeLists.txt  ToeTacTic.cpp
