CMAKE_MINIMUM_REQUIRED(VERSION 2.8.4)

ENABLE_TESTING()

PROJECT(Terminal)
SET(CMAKE_MODULE_PATH ${CMAKE_SOURCE_DIR}/cmake_modules)

IF(UNIX)
  SET(CMAKE_CXX_FLAGS "${CMAKE_CXX_FLAGS} -Wall -std=gnu++0x")
ENDIF()

SET(CMAKE_ARCHIVE_OUTPUT_DIRECTORY ${PROJECT_BINARY_DIR}/lib)
SET(EXECUTABLE_OUTPUT_PATH ${PROJECT_BINARY_DIR}/bin)

INCLUDE(functions)
INCLUDE_DIRECTORIES(${CMAKE_SOURCE_DIR})

IF(WIN32)
  ADD_DEFINITIONS(-DBOOST_ALL_NO_LIB)
  SET(Boost_USE_STATIC_LIBS   ON)
ELSE()
  SET(Boost_USE_STATIC_LIBS  OFF)
ENDIF()
SET(Boost_USE_MULTITHREADED   ON)
SET(Boost_USE_STATIC_RUNTIME OFF)

FIND_PACKAGE(Boost 1.54.0 COMPONENTS date_time filesystem regex serialization system thread unit_test_framework REQUIRED)
INCLUDE_DIRECTORIES(${Boost_INCLUDE_DIRS})
LINK_DIRECTORIES(${Boost_LIBRARY_DIRS})

ADD_SUBDIRECTORY(common)
ADD_SUBDIRECTORY(archive)
ADD_SUBDIRECTORY(blackjack)
ADD_SUBDIRECTORY(checkers)
ADD_SUBDIRECTORY(chess)
ADD_SUBDIRECTORY(connectn)
ADD_SUBDIRECTORY(irc)
ADD_SUBDIRECTORY(solitaire)
ADD_SUBDIRECTORY(tetris)
ADD_SUBDIRECTORY(tictactoe)
ADD_SUBDIRECTORY(toetactic)
ADD_SUBDIRECTORY(src)
