PROJECT(archive)
add_modules(source Archive ArchiveUtil)
ADD_LIBRARY(archive ${source})
TARGET_LINK_LIBRARIES(archive common ${Boost_LIBRARIES})
ADD_EXECUTABLE(archive_test src/ArchiveTest.cpp)
TARGET_LINK_LIBRARIES(archive_test ${Boost_UNIT_TEST_FRAMEWORK_LIBRARY})
ADD_TEST(NAME test_macro_overview COMMAND archive_test)
