PROJECT(common)
add_modules(source Card Deck Grid Main Piece Hand Player Random)
ADD_LIBRARY(common ${source} include/termcolor.hpp src/sqlite3.c include/sqlite3.h)
IF(UNIX)
  TARGET_LINK_LIBRARIES(common pthread dl)
ENDIF()
ADD_EXECUTABLE(sqlite3 src/shell.c include/sqlite3.h)
TARGET_LINK_LIBRARIES(sqlite3 common)
