INCLUDE_DIRECTORIES(${common_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${archive_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${fp_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${solitaire_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${meta_SOURCE_DIR}/include)
INCLUDE_DIRECTORIES(${tetris_SOURCE_DIR}/include)
ADD_EXECUTABLE(lobby lobby.cpp)
TARGET_LINK_LIBRARIES(lobby archive blackjack checkers chess connectn fp solitaire tetris tictactoe toetactic)
